// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recycle-bin-tree children should get recycle bin child items 1`] = `
{
  "content": [
    {
      "text": "{"total":0,"items":[]}",
      "type": "text",
    },
  ],
}
`;

exports[`recycle-bin-tree children should handle non-existent parent in recycle bin 1`] = `
{
  "content": [
    {
      "text": "{"total":0,"items":[]}",
      "type": "text",
    },
  ],
}
`;

exports[`recycle-bin-tree root should get recycle bin root items 1`] = `
{
  "content": [
    {
      "text": "{"total":1,"items":[{"documentType":{"id":"a95360e8-ff04-40b1-8f46-7aa4b5983096","icon":"icon-home color-blue","collection":null},"variants":[{"state":"Draft","name":"_Test RecycleBin Root","culture":null}],"id":"00000000-0000-0000-0000-000000000000","createDate":"NORMALIZED_DATE","hasChildren":false,"parent":null}]}",
      "type": "text",
    },
  ],
}
`;
